--- a/src/home.css
+++ b/src/home.css
@@ -12,5 +12,19 @@
   .blurred-image:hover {
     filter: blur(0px);
   }
+  .carousel-caption h3 {
+    color: white !important;
+    padding: 10px;
+  }
   
+  
+  
+  @media (max-width: 768px) {
+    h1.font-family {
+      font-size: 2rem; /* Smaller font size on mobile */
+    }
+    p.font-family {
+      font-size: 1rem; /* Adjust body text size */
+    }
+  }
   
