--- a/src/Fonts.css
+++ b/src/Fonts.css
@@ -1,10 +1,23 @@
-h1, h2, h3, h4, h5, h6 {
-    font-family: 'Montserrat', 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-weight: bold;
-    font-size: xx-large;
-  }
-  
-  body {
-    font-family: 'Roboto', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  }
-  
+/* Font Styling */
+h1.display-4 {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 700;
+}
+
+h2 {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+}
+
+p.lead {
+  font-size: 1.25rem;
+}
+
+body {
+  font-family: 'Roboto', sans-serif;
+}
+header h1 {
+  text-align: center;
+  color: #2980B9; /* Keep the existing color */
+  margin-bottom: 20px; /* Optional: Add some space below the title */
+}
