--- a/src/hobbies.css
+++ b/src/hobbies.css
@@ -1,4 +1,3 @@
-
 /* Video Section */
 .video-container {
   max-width: 100%;
@@ -27,9 +26,7 @@
   border-radius: 10px;
 }
 
-
-  
-  /* Global Styles */
+/* Global Styles */
 body {
   font-family: 'Arial', sans-serif;
   background-color: #f8f9fa;
@@ -66,8 +63,9 @@ button:hover {
   max-width: 1200px;
 }
 
-h2, h3 {
+h1, h2, h3 {
   color: #303030;
+  font-size: 3rem; /* Make the title bigger */
 }
 
 .video-container {
